WIP: update project

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
   "dependencies": {
+    "@creditas/global": "^1.0.89",
+    "@creditas/stylitas": "^2.17.13",
+    "@creditas/tokens": "^2.2.3",
     "gatsby": "^2.19.1",
     "gatsby-image": "^2.0.13",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-source-contentful": "^2.1.78",
     "gatsby-transformer-remark": "^2.1.6",
-    "gh-pages": "^2.0.1",
     "lodash": "^4.17.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
